[package]
name = "nexus-config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Configuration management for Nexus framework.
Nexus框架的配置管理。
Equivalent to: Spring Boot @ConfigurationProperties, @Value, Environment
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Serialization / 序列化 (Spring Jackson)
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration formats / 配置格式
config = { workspace = true }
toml = { workspace = true }
yaml-rust2 = { workspace = true }
serde_yaml = { workspace = true }
dotenvy = { workspace = true }

# Async runtime / 异步运行时
nexus-runtime = { path = "../nexus-runtime" }

# Error handling / 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# Validation / 验证
validator = { workspace = true }

# Utilities / 工具
chrono = { workspace = true }
indexmap = { workspace = true }

# Logging / 日志
tracing = { workspace = true }

# Utilities / 工具
once_cell = { workspace = true }

# Macros / 宏
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
# Testing / 测试
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
