[package]
name = "nexus-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

description = """
Core types and traits for Nexus framework.
Nexus框架的核心类型和trait。
Equivalent to: Spring Core, Spring Context, Spring Beans
"""

[lints]
workspace = true

[dependencies]
# Core container (IoC) / 核心容器 (IoC)
# Equivalent to: Spring ApplicationContext, BeanFactory
arc-swap.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

# HTTP types / HTTP类型 (Spring Web HTTP)
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true

# Bytes / 字节
bytes.workspace = true

# Serialization / 序列化 (Spring Jackson JSON)
serde.workspace = true
serde_json.workspace = true

# Error handling / 错误处理 (Spring Exception Handling, @ResponseStatus)
thiserror.workspace = true
anyhow.workspace = true
error-stack.workspace = true

# Async runtime / 异步运行时
nexus-runtime = { path = "../nexus-runtime" }

# Async traits / 异步trait
async-trait.workspace = true
futures.workspace = true
pin-project-lite.workspace = true

# Utilities / 工具 (Spring Utils)
indexmap.workspace = true
itertools.workspace = true

# UUID / UUID (Spring Request ID)
uuid.workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion.workspace = true

# Benchmarks will be added in Phase 2
# 基准测试将在第2阶段添加
