[package]
name = "nexus-data-annotations"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Spring Data JPA style annotations for Nexus framework.
Nexus框架的Spring Data JPA风格注解。
Equivalent to: Spring Data JPA, JPA Annotations
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Macro dependencies / 宏依赖
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
darling_core = { workspace = true }

# Async runtime / 异步运行时
tokio = { workspace = true, features = ["sync"] }

# Random / 随机数
rand = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
