[package]
name = "nexus-data-annotations"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Spring Data JPA style annotations for Nexus framework.
Nexus框架的Spring Data JPA风格注解。
Equivalent to: Spring Data JPA, JPA Annotations
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Macro dependencies / 宏依赖
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
darling_core = { workspace = true }

# Error handling / 错误处理
thiserror = { workspace = true }

# Serialization / 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime / 异步运行时
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# Random / 随机数
rand = { workspace = true }

# Optional security dependency (for @PreAuthorize macro)
# 安全依赖（用于 @PreAuthorize 宏）
nexus-security = { path = "../nexus-security", optional = true }

[features]
default = []
# Enable security integration for @PreAuthorize macro
# 启用 @PreAuthorize 宏的安全集成
security = ["nexus-security"]

[dev-dependencies]
trybuild = { workspace = true }
