[package]
name = "nexus-data-commons"
version = "0.1.0-alpha"
edition = "2024"
rust-version = "1.93"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
uuid = { version = "1.20", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
