[package]
name = "nexus-data-rdbc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactive database access for Nexus framework (R2DBC equivalent)"
keywords = ["nexus", "data", "r2dbc", "database", "reactive"]
categories = ["database", "asynchronous"]

[features]
default = ["postgres"]

# PostgreSQL support
postgres = ["sqlx/postgres"]

# MySQL support
mysql = ["sqlx/mysql"]

# SQLite support
sqlite = ["sqlx/sqlite"]

# All databases
all = ["postgres", "mysql", "sqlite"]

# R2DBC compatibility layer
r2dbc-compat = []

[dependencies]
# Data commons
nexus-data-commons = { path = "../nexus-data-commons" }

# Async runtime
nexus-runtime = { path = "../nexus-runtime" }

# SQLx for reactive database access
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono"] }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Async trait support
async-trait = "0.1"

# UUID support
uuid = { version = "1.12", features = ["v4", "serde"] }

# Chrono for datetime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }

# Futures support
futures-util = "0.3"
