[package]
name = "nexus-extractors"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Request extractors for Nexus framework.
Nexus框架的请求提取器。
Equivalent to: Spring @RequestParam, @PathVariable, @RequestBody, @RequestHeader
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json", "form", "query", "path", "header", "cookie"]
json = []
form = []
query = []
path = []
header = []
cookie = []
multipart = ["dep:multer"]
validation = ["dep:validator", "dep:email_address"]
full = ["json", "form", "query", "path", "header", "cookie", "multipart", "validation"]

[dependencies]
# HTTP types / HTTP类型 (Spring Web HTTP)
http = { workspace = true }

# Core types / 核心类型
nexus-core = { path = "../nexus-core" }
nexus-http = { path = "../nexus-http" }

# Serialization / 序列化 (Spring Jackson, @RequestBody)
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

# Form handling / 表单处理 (Spring @ModelAttribute, MultipartFile)
multer = { workspace = true, optional = true }

# Validation / 验证 (Spring Validation, @Valid, @Validated)
validator = { workspace = true, optional = true }
email_address = { workspace = true, optional = true }

# Error handling / 错误处理 (Spring @ResponseStatus, @ExceptionHandler)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async utilities / 异步工具
futures = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
