[package]
name = "nexus-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
HTTP server and client for Nexus framework.
Nexus框架的HTTP服务器和客户端。
Equivalent to: Spring Web, Spring WebFlux, Spring MVC
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["http1", "json"]
http1 = ["hyper?/http1"]
http2 = ["hyper", "hyper-util", "dep:h2"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:futures-rustls", "dep:tokio-rustls"]
server = ["hyper", "hyper-util/server"]
client = ["hyper", "hyper-util/client"]
tls = ["dep:tokio-rustls"]
full = ["http1", "http2", "http3", "server", "client", "tls", "json"]
json = ["dep:serde_json"]

[dependencies]
# HTTP types / HTTP类型 (Spring Web HTTP)
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
httparse = { workspace = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
h2 = { workspace = true, optional = true }

# HTTP/3 / HTTP/3 (Spring HTTP/3 equivalent)
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
futures-rustls = { workspace = true, optional = true }

# TLS / TLS (Spring HTTPS support)
rustls = { workspace = true }
tokio-rustls = { workspace = true, optional = true }

# Bytes / 字节
bytes = { workspace = true }

# Runtime / 运行时
nexus-runtime = { path = "../nexus-runtime" }
nexus-core = { path = "../nexus-core" }

# Serialization / 序列化 (Spring Jackson JSON)
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { workspace = true }

# Error handling / 错误处理 (Spring @ResponseStatus, @ExceptionHandler)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging / 日志 (Spring Logging, Logback)
tracing = { workspace = true }

# Async utilities / 异步工具
futures = { workspace = true }
pin-project-lite = { workspace = true }

# Utilities / 工具
once_cell = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test, MockMvc)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }

# Benchmarks will be added in Phase 2
# 基准测试将在第2阶段添加
# [[bench]]
# name = "http"
# harness = false
