[package]
name = "nexus-lombok"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Lombok-style annotations for Nexus framework.
Nexus框架的Lombok风格注解。
Equivalent to: Project Lombok
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["full"]
full = [
    "getter",
    "setter",
    "constructor",
    "data",
    "builder",
    "value",
    "with",
]
getter = []
setter = []
constructor = []
data = []
builder = []
value = []
with = []

[dependencies]
# Macro dependencies / 宏依赖
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
