[package]
name = "nexus-macros"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Procedural macros for Nexus framework.
Nexus框架的过程宏。
Equivalent to: Spring Annotation Processing, Spring Boot Configuration
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["derive", "route"]
derive = []  # #[derive(Handler, Extractor, Response)]
route = []  # #[route], #[get], #[post], etc.
component = []  # Spring @Component equivalent
autowired = []  # Spring @Autowired equivalent
config = []  # Spring @ConfigurationProperties equivalent
scheduled = []  # Spring @Scheduled equivalent
async = []  # Spring @Async equivalent
full = ["derive", "route", "component", "autowired", "config", "scheduled", "async"]

[dependencies]
# Macro dependencies / 宏依赖 (Spring Annotation Processing)
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
darling = { workspace = true }

# Attribute parsing / 属性解析
# 移除了未使用的 proc-macro-error 依赖
# Rust 1.81+ 内置了更好的编译错误诊断功能
# proc-macro-error is unmaintained - removed, unused in code
# proc-macro-error = { workspace = true }
# proc-macro-error-attr = { workspace = true }

# HTTP types / HTTP类型 (Spring Web HTTP)
http = { workspace = true }

# Serialization / 序列化 (Spring Jackson, @ConfigurationProperties)
serde = { workspace = true }
serde_json = { workspace = true }

# Runtime / 运行时
nexus-runtime = { path = "../nexus-runtime" }

[lints]
workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test)
nexus-core = { path = "../nexus-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { workspace = true }
