[package]
name = "nexus-middleware"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Middleware for Nexus framework.
Nexus框架的中间件。
Equivalent to: Spring Interceptor, Filter, @ControllerAdvice
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cors", "compression", "limit", "timeout", "trace", "static"]
compression = ["dep:async-compression"]
cors = ["dep:tower-http"]
csrf = ["dep:csrf"]
limit = []
timeout = []
trace = []
static = []
security = []
session = []
full = ["compression", "cors", "csrf", "limit", "timeout", "trace", "static", "security", "session"]

[dependencies]
# HTTP types / HTTP类型 (Spring Web HTTP)
http = { workspace = true }

# Core types / 核心类型
nexus-core = { path = "../nexus-core" }
nexus-http = { path = "../nexus-http" }
nexus-router = { path = "../nexus-router" }

# Runtime / 运行时
nexus-runtime = { path = "../nexus-runtime" }
tokio = { workspace = true, features = ["time"] }

# Compression / 压缩 (Spring Content-Encoding, GzipFilter)
async-compression = { workspace = true, features = ["tokio", "brotli", "gzip", "zstd", "deflate"], optional = true }

# CORS / CORS (Spring CORS, @CrossOrigin)
tower-http = { workspace = true, features = ["cors"], optional = true }

# CSRF / CSRF (Spring Security CSRF)
csrf = { workspace = true, optional = true }

# Rate limiting / 限流 (Spring Rate Limiting)
governor = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }

# Error handling / 错误处理 (Spring @ExceptionHandler, @ResponseStatus)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging / 日志 (Spring Logging, Logback)
tracing = { workspace = true }

# Async utilities / 异步工具
futures = { workspace = true }
pin-project-lite = { workspace = true }

# Time / 时间 (Spring @RequestTimeout)
time = { workspace = true }

# Security headers / 安全头 (Spring Security Headers)
headers = { workspace = true }

# MIME type detection / MIME类型检测
mime_guess = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
