[package]
name = "nexus-multipart"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Multipart file upload support for Nexus framework.
Nexus框架的多部分文件上传支持。
Equivalent to: Spring MultipartFile, @RequestPart
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Workspace dependencies
nexus-http = { path = "../nexus-http" }
nexus-core = { path = "../nexus-core" }

# External dependencies
multer = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["io-util", "fs"] }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
