[package]
name = "nexus-observability"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Observability (tracing, metrics, logging) for Nexus framework.
Nexus框架的可观测性（追踪、指标、日志）。
Equivalent to: Spring Cloud Sleuth, Micrometer, Spring Boot Actuator
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace", "log", "metrics", "nexus-format"]
trace = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
# DEPRECATED: jaeger 特性已弃用 - opentelemetry-jaeger 包不再维护
# 建议使用 otlp 特性替代，它连接到 OpenTelemetry Collector
# DEPRECATED: jaeger feature is unmaintained - use otlp instead
# The otlp feature connects to OpenTelemetry Collector which supports Jaeger export
jaeger = ["trace", "dep:opentelemetry-jaeger"]
otlp = ["trace", "dep:opentelemetry-otlp"]
zipkin = ["trace"]
metrics = ["dep:prometheus", "dep:metrics-exporter-prometheus"]
log = []
nexus-format = []
json = ["tracing-subscriber/json"]
actuator = ["metrics", "log"]
full = ["trace", "jaeger", "otlp", "metrics", "log", "json", "actuator", "nexus-format"]

[dependencies]
# Tracing / 追踪 (Spring Cloud Sleuth, Distributed Tracing)
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }

# OpenTelemetry / OpenTelemetry (Spring Cloud Observability)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
# 注意: opentelemetry-jaeger 已不再维护 (RUSTSEC-2025-0123)
# 建议使用 OTLP 协议连接到 OpenTelemetry Collector
# Note: opentelemetry-jaeger is unmaintained, consider using otlp instead
opentelemetry-jaeger = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
# opentelemetry-prometheus is discontinued - removed due to security vulnerabilities
# Use custom metrics export or opentelemetry-prometheus-text-exporter instead

# Metrics / 指标 (Spring Boot Actuator Metrics, Micrometer)
prometheus = { workspace = true, optional = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Error handling / 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time / 时间
time = { workspace = true }
chrono = { workspace = true }

# Runtime / 运行时
nexus-runtime = { path = "../nexus-runtime" }

# HTTP types / HTTP类型
http = { workspace = true }
hyper = { workspace = true, optional = true }

# Serialization / 序列化 (Spring Boot Actuator JSON)
serde = { workspace = true }
serde_json = { workspace = true }

# Logging / 日志 (Spring Logging, Logback)
log = { workspace = true }
slog = { workspace = true }

# Utilities / 工具
uuid = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
