[package]
name = "nexus-openapi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
OpenAPI/Swagger documentation support for Nexus framework.
Nexus框架的OpenAPI/Swagger文档支持。
Equivalent to: SpringDoc OpenAPI (Swagger 3), @Operation, @ApiResponse
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["swagger", "json"]
swagger = ["utoipa-swagger-ui"]
json = ["utoipa"]
actix = ["utoipa-swagger-ui/actix-web"]
axum = ["utoipa-swagger-ui/axum"]
rocket = []

[dependencies]
# HTTP types / HTTP类型
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI/Swagger / OpenAPI/Swagger
# Note: utoipa and utoipa-swagger-ui are not in workspace, keeping direct versions
utoipa = { version = "4", features = ["chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web", "axum"] }

# Core types / 核心类型
nexus-http = { path = "../nexus-http" }
nexus-core = { path = "../nexus-core" }

# Error handling / 错误处理
thiserror = { workspace = true }

# Time / 时间
chrono = { workspace = true }

# UUID / UUID
uuid = { workspace = true, features = ["serde", "v4"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
